--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -1,56 +1,58 @@
-# name: Playwright Tests
-# on:
-#   push:
-#     branches: [main, master]
-#   pull_request:
-#     branches: [main, master]
-#   schedule:
-#     - cron: "0 0 * * *" # 6 AM GMT+6 (0 0 in UTC)
+name: Playwright Tests
+on:
+  push:
+    branches: [main, master]
+  pull_request:
+    branches: [main, master]
+  schedule:
+    - cron: "0 0 * * *" # 6 AM GMT+6 (0 0 in UTC)
 
-# jobs:
-#   test:
-#     timeout-minutes: 60
-#     runs-on: ubuntu-latest
+jobs:
+  test:
+    timeout-minutes: 60
+    runs-on: ubuntu-latest
 
-#     steps:
-#       - name: Checkout code
-#         uses: actions/checkout@v4
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
 
-#       - name: Set up Node.js
-#         uses: actions/setup-node@v4
-#         with:
-#           node-version: 20
+      - name: Set up Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: 20
 
-#       - name: Install dependencies
-#         run: npm ci
+      - name: Install dependencies
+        run: npm ci
 
-#       - name: Install Playwright Browsers
-#         run: npx playwright install --with-deps
+      - name: Install Playwright Browsers
+        run: npx playwright install --with-deps
 
-#       - name: Set up environment variables
-#         run: |
-#           mkdir .auth && echo "{}" >> .auth/auth.json
-#           echo "LIVE_URL=${{ secrets.LIVE_URL }}" >> .env
-#           echo "DEV_URL=${{ secrets.DEV_URL }}" >> .env
-#           echo "BASE_URL=${{ secrets.BASE_URL }}" >> .env
+      - name: Set up environment variables
+        run: |
+          mkdir -p playwright/.auth
+          echo "${{ secrets.KAHF01_SESSION }}" > playwright/.auth/kahf01.json
+          echo "${{ secrets.HIKMAH01_SESSION }}" > playwright/.auth/hikmah01.json
+          echo "BASE_URL=${{ secrets.BASE_URL }}" >> .env
+          echo "KAHF_ID=${{ secrets.KAHF_ID }}" >> .env
 
-#       - name: Run Playwright tests
-#         run: npx playwright test
+      - name: Run Playwright tests
+        run: npx playwright test tests/public-home.spec.ts tests/tags.spec.ts
 
-#       - name: Upload Playwright report
-#         if: ${{ !cancelled() }}
-#         uses: actions/upload-artifact@v4
-#         with:
-#           name: playwright-report
-#           path: playwright-report/
-#           retention-days: 30
+      - name: Upload Playwright report
+        if: ${{ !cancelled() }}
+        uses: actions/upload-artifact@v4
+        with:
+          name: playwright-report
+          path: playwright-report/
+          retention-days: 30
 
-#       - name: Publish HTML report to GitHub Pages (https://hikmah.hurayraiit.com/)
-#         if: always()
-#         uses: peaceiris/actions-gh-pages@v4
-#         with:
-#           github_token: ${{ secrets.PERSONAL_ACCESS_TOKEN }}
-#           publish_dir: playwright-report/
-#           keep_files: true
-#           user_name: "github-actions[bot]"
-#           user_email: "github-actions[bot]@users.noreply.github.com"
+      - name: Publish HTML report (https://hikmah-e2e.hurayraiit.com/)
+        if: always()
+        uses: peaceiris/actions-gh-pages@v4
+        with:
+          github_token: ${{ secrets.PERSONAL_ACCESS_TOKEN }}
+          publish_dir: playwright-report/
+          keep_files: false
+          force_orphan: true
+          user_name: "github-actions[bot]"
+          user_email: "github-actions[bot]@users.noreply.github.com"
