--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -46,13 +46,22 @@ jobs:
           path: playwright-report/
           retention-days: 30
 
-      - name: Publish HTML report (https://hikmah-e2e.hurayraiit.com/)
+      - name: Publish to gh-pages branch
         if: always()
-        uses: peaceiris/actions-gh-pages@v4
-        with:
-          github_token: ${{ secrets.PERSONAL_ACCESS_TOKEN }}
-          publish_dir: playwright-report/
-          keep_files: false
-          force_orphan: true
-          user_name: "github-actions[bot]"
-          user_email: "github-actions[bot]@users.noreply.github.com"
+        env:
+          GITHUB_TOKEN: ${{ secrets.PERSONAL_ACCESS_TOKEN }}
+        run: |
+          if [ -d "playwright-report" ]; then
+            git config --global user.name "github-actions[bot]"
+            git config --global user.email "github-actions[bot]@users.noreply.github.com"
+            git checkout --orphan gh-pages
+            git reset --hard
+            rm -rf *
+            cp -r playwright-report/* .
+            git add .
+            git commit -m "docs: update playwright report [skip ci]"
+            git push origin gh-pages --force
+          else
+            echo "playwright-report directory not found, skipping deployment"
+            exit 0
+          fi
