--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -56,7 +56,7 @@ jobs:
             git config --global user.email "github-actions[bot]@users.noreply.github.com"
             git checkout --orphan gh-pages
             git reset --hard
-            rm -rf *
+            find . -maxdepth 1 ! -name '.git' ! -name 'playwright-report' -exec rm -rf {} +
             cp -r playwright-report/* .
             git add .
             git commit -m "docs: update playwright report [skip ci]"
