--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -55,8 +55,8 @@ jobs:
             git config --global user.name "github-actions[bot]"
             git config --global user.email "github-actions[bot]@users.noreply.github.com"
             git checkout --orphan gh-pages
-            git reset --hard
-            find . -maxdepth 1 ! -name '.git' ! -name 'playwright-report' -exec rm -rf {} +
+            git rm -rf .
+            git clean -fxd
             cp -r playwright-report/* .
             git add .
             git commit -m "docs: update playwright report [skip ci]"
