feat: enhance test report formatting with prettier message and CI/local environment indicator

--- a/.env.example
+++ b/.env.example
@@ -3,3 +3,9 @@ KAHF_ID=
 LINKEDIN_EMAIL=
 LINKEDIN_PASS=
 PERSONAL_ACCESS_TOKEN=
+
+# Telegram Bot Token
+TELEGRAM_BOT_TOKEN=
+
+# Telegram Channel ID
+TELEGRAM_CHANNEL_ID=
