--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -34,6 +34,8 @@ jobs:
           echo "${{ secrets.HIKMAH01_SESSION }}" | base64 --decode > playwright/.auth/hikmah01.json
           echo "BASE_URL=${{ secrets.BASE_URL }}" >> .env
           echo "KAHF_ID=${{ secrets.KAHF_ID }}" >> .env
+          echo "TELEGRAM_BOT_TOKEN=${{ secrets.TELEGRAM_BOT_TOKEN }}" >> .env
+          echo "TELEGRAM_CHANNEL_ID=${{ secrets.TELEGRAM_CHANNEL_ID }}" >> .env
 
       - name: Run Playwright tests
         run: npx playwright test
@@ -54,6 +56,8 @@ jobs:
           publish_dir: playwright-report/
           keep_files: false
           force_orphan: true
-          cname: ""
           user_name: "github-actions[bot]"
           user_email: "github-actions[bot]@users.noreply.github.com"
+
+      - name: Send report to Telegram
+        run: node utils/send-report-to-telegram.js
