--- a/package.json
+++ b/package.json
@@ -13,5 +13,8 @@
     "@playwright/test": "^1.52.0",
     "@types/node": "^22.14.0",
     "dotenv": "^16.5.0"
+  },
+  "dependencies": {
+    "axios": "^1.8.4"
   }
 }
