feat: using new test account and enhance authentication setup for Playwright tests

--- a/.env.example
+++ b/.env.example
@@ -1,11 +1,12 @@
 BASE_URL=
 KAHF_ID=
-LINKEDIN_EMAIL=
-LINKEDIN_PASS=
+
 PERSONAL_ACCESS_TOKEN=
 
-# Telegram Bot Token
-TELEGRAM_BOT_TOKEN=
+# LinkedIn Credentials
+LinkedIn_USERNAME=
+LinkedIn_PASSWORD=
 
-# Telegram Channel ID
+# Telegram Bot Token & Channel ID
+TELEGRAM_BOT_TOKEN=
 TELEGRAM_CHANNEL_ID=
