--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -31,7 +31,7 @@ jobs:
         run: |
           mkdir -p playwright/.auth
           echo "${{ secrets.KAHF01_SESSION }}" | base64 --decode > playwright/.auth/kahf01.json
-          echo "${{ secrets.HIKMAH01_SESSION }}" | base64 --decode > playwright/.auth/hikmah01.json
+          echo "{}" > playwright/.auth/hikmah01.json
           echo "BASE_URL=${{ secrets.BASE_URL }}" >> .env
           echo "KAHF_ID=${{ secrets.KAHF_ID }}" >> .env
           echo "TELEGRAM_BOT_TOKEN=${{ secrets.TELEGRAM_BOT_TOKEN }}" >> .env
