feat: add LinkedIn credentials to environment setup and update test navigation to use root URL

--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -36,6 +36,8 @@ jobs:
           echo "KAHF_ID=${{ secrets.KAHF_ID }}" >> .env
           echo "TELEGRAM_BOT_TOKEN=${{ secrets.TELEGRAM_BOT_TOKEN }}" >> .env
           echo "TELEGRAM_CHANNEL_ID=${{ secrets.TELEGRAM_CHANNEL_ID }}" >> .env
+          echo "LinkedIn_PASSWORD=${{ secrets.LinkedIn_PASSWORD }}" >> .env
+          echo "LinkedIn_USERNAME=${{ secrets.LinkedIn_USERNAME }}" >> .env
 
       - name: Run Playwright tests
         run: npx playwright test
