--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -5,7 +5,7 @@ on:
   pull_request:
     branches: [main, master]
   schedule:
-    - cron: "0 0 * * *" # 6 AM GMT+6 (0 0 in UTC)
+    - cron: "0 */8 * * *" # Every 8 hours (UTC)
 
 jobs:
   test:
